--- a/lab1/hw1.Rmd
+++ b/lab1/hw1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 1 Homework"
-author: "Your Name Here"
+author: "Renxiao Deng"
 date: "`r Sys.Date()`"
 output:
   html_document: 
@@ -11,13 +11,13 @@ output:
 Answer the following questions and/or complete the exercises in RMarkdown. Please embed all of your code and push the final work to your repository. Your report should be organized, clean, and run free from errors. Remember, you must remove the `#` for any included code chunks to run.  
 
 **1. Please tell us why you are taking BIS 15L.**
-
+Because it is required for by system and synthetic biology class and it can help me better with my stats class which also use R for labs. 
 **2. Do you have any coding experience? If yes, please tell us what languages you have coded in and your level of experience.**
-
+  Yes, I've coded in python with some entry level experiences and I know some basic website design knowledge. 
 **3. Navigate to the `datascibiol` repository on GitHub. Notice that near the bottom there is a description of the repository. You want something like this on your repository! It is built by making edits to the `README.md` file using RMarkdown. Edit your repository's `README.md` file so that you have an informative description, including your email address. Be creative! You don't need to just copy mine. There are lots of examples online.**  
-
+Done it!
 **4. Please put a link to your GitHub repository below.**
-
+https://github.com/Dale1031/BIS15L_W26_RenxiaoDeng.git
 **5. Make sure that your repository includes the practice file `dummy_push` from lab 1.2. If you have not done so already, please add your name to this file, knit it, and push it to your repository.**  
 
 ## Knit and Upload
