--- a/lab2/lab2_1.Rmd
+++ b/lab2/lab2_1.Rmd
@@ -21,10 +21,15 @@ output:
 
 ## Working Directories and Paths
 Before we get started with R, it is important to understand the concept of working directories and paths. A working directory is the folder on your computer where R will look for files to read in and where it will save files that you create. You can check your current working directory using the `getwd()` function.
+Code chunk
 ```{r}
 
 ```
-
+ command + option+i
+```{r}
+getwd() #identify current working directory
+```
+ 
 What if you find that you are not in the correct working directory? You can change your working directory in two ways. The first is to look at the Session menu at the top of RStudio. Click on Session -> Set Working Directory -> Choose Directory. Then navigate to the folder you want to use as your working directory. 
 
 The second way is to use the `setwd()` function. You will need to provide the full path to the folder you want to use. For example:
@@ -39,46 +44,47 @@ In order to access the potential of R we need to assign values or other types of
 
 Assign a value to object 'x'. The '<-' symbol is read as 'gets'. In this case, x gets 42. Make sure that you are in the environment panel and you should see the value associated with 'x'. On a mac, you can push `option` and `-` to automatically generate the gets symbol.  
 ```{r}
-
+x <- 42 #x gets the value 42
 ```
 
 To print the object to the screen, just type x.  
 ```{r}
-
+x 
 ```
 
 Assign a value of 30 to a new object y.
 ```{r}
-
+y <- 30
 ```
 
 The = symbol works, but is not a convention followed by most programmers.
 ```{r}
-
+x = 42
 ```
 
 Once objects have been created, you can do things with them.  
 ```{r}
-
+x-y
 ```
 
 ```{r}
-
+x+y
 ```
 
 Make two new objects, treatment and control. The value of treatment is 36 and the value of control is 38.
 ```{r}
-
+treatment <- 36
+control <- 38
 ```
 
 What is the sum of treatment and control?
 ```{r}
-
+sum(treatment,control)
 ```
 
 Here we make a new object `my_experiment` that is the sum of the treatment and control. Notice that I use `_` and not spaces. 
 ```{r}
-
+my_experiment <- sum(treatment, control)
 ```
 
 We can also use the function sum to do the same thing. Notice that if I give a new object the same name as an existing object, the old one is replaced.
@@ -104,12 +110,12 @@ We get an error here because `else` is a function in R. You also don't want to g
 
 What is the mean of 2+8+2? (Do the math in your head first). Does the following code match your prediction?
 ```{r}
-
+avg <- (2+8+2)/3
 ```
 
 Order of operations applies, so we need to tell R exactly what we want.
 ```{r}
-
+mean(c(2,8,2)) #c stands for combine and creates a vector
 ```
 
 Here we use the mean function. Notice that we use `c` which stands for concatenate. This combines the three numbers into a single object that the mean function can use. This type of data structure is called a vector.
@@ -125,17 +131,19 @@ Why does this not work?
 ## Practice
 1. Create three new objects, `venom_GT`, `chiron`, and `veyron`. These are the fastest cars in the world. Assign each car to its top speed. The venom_GT can go 270, chiron is 261, and veyron is 268. 
 ```{r}
-
+venom_GT <- 270
+chiron <- 260
+veyron <- 268
 ```
 
 2. Use arithmetic to calculate the mean top speed for the cars.
 ```{r}
-
+(venom_GT+chiron+veyron)/3  
 ```
 
 3. Use the function `mean()` to calculate the mean top speed for the cars.
 ```{r}
-
+mean(c(venom_GT,chiron,veyron))
 ```
 
 ## Types of Data
@@ -149,7 +157,7 @@ my_logical <- FALSE
 
 To find out what type of data you are working with, use the `class()` function. This is important because sometimes we will need to change the type of data to perform certain analyses.
 ```{r}
-
+class(my_numeric)
 ```
 
 ```{r}
@@ -163,7 +171,7 @@ You can use the `is()` and `as()` functions to clarify or specify a type of data
 
 Let's convert my_numeric to an integer.
 ```{r}
-
+my_integer <- as.integer(my_numeric)
 ```
 
 ```{r}
@@ -175,15 +183,15 @@ R has a special way to designate missing data, the NA. NA values in R have speci
 
 NA values are used to designate missing data. `is.na` or `anyNA` are useful functions when dealing with NAs in data. 
 ```{r}
-
+my_missing <- NA #NA stands for missing
 ```
 
 ```{r}
-
+is.na(my_missing)
 ```
 
 ```{r}
-
+anyNA(my_missing)
 ```
 
 ## Practice  
@@ -194,11 +202,11 @@ new_vector <- c(7, 6.2, 5, 9, NA, 4, 9.8, 7, 3, 2)
 
 2. Calculate the mean of `new_vector`.
 ```{r}
-
+mean(new_vector)
 ```
 
 3. How do you interpret this result? What does this mean about NAs? 
-
+not informative
 4. Recalculate the mean using the following code chunk. Why is the useful?  
 ```{r}
 mean(new_vector, na.rm = TRUE) #removes NA values
